<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bote"
            android:drawableRight="@drawable/bote"
            android:ems="10"
            android:gravity="center"
            android:text="@string/rating"
            android:textColor="#000"
            android:textSize="28sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sistema"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/precio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/calidad"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar3"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/inn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar4"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/atenn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar5"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="5"
                android:rating="0" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVotar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:backgroundTint="#2736BA"
                android:onClick="votar"
                android:text="@string/votar" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:backgroundTint="#2736BA"
                android:onClick="regresar"
                android:text="@string/regresar" />

        </LinearLayout>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>