<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nivel"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/icon_water1"
            android:drawableRight="@drawable/icon_water1"/>

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="476dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnNotificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2736BA"
            android:gravity="center"
            android:text="@string/notificacion"
            android:textColor="#FFFF"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2736BA"
            android:gravity="center"
            android:text="@string/rating"
            android:textColor="#FFFF"
            android:textStyle="italic" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>